<resources>
    <string name="app_name">La Camaronera</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login_login">Iniciar Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu">Menú</string>
    <string name="menu_sale">Venta</string>
    <string name="menu_sales">Ventas</string>
    <string name="menu_stock">Inventario</string>
    <string name="menu_assorment">Surtido</string>
    <string name="menu_assorments">Surtidos</string>
    <string name="menu_expences">Servicios</string>

    <string name="dish_name">Nombre</string>
    <string name="dish_price">Precio</string>
    <string name="dish_cost">Costo</string>
    <string name="dish_group">Familia</string>
    <string name="dish_description">Descripción</string>
    <string name="dish_existence">Existencia</string>
    <string name="dish_measurement">Medida</string>
    <string name="dish_add">Agregar</string>
    <string name="dish_add_ingredient">Agregar Ingrediente</string>
    <string name="dish_add_ingredient_title_dish">Cantidad a consumir</string>
    <string name="dish_add_ingredient_title_assorment">Cantidad a comprar</string>
    <string name="dish_delete">¿Estas seguro que deseas eliminar este platillo?</string>

    <string name="ingredient_edit">Editar</string>
    <string name="ingredient_update">Actualizar</string>
    <string name="ingredient_delete">¿Estas seguro que deseas eliminar este ingrediente?</string>
    <string name="ingredient_delete_error">Ingrediente en uso, favor de remover el ingrediente de los platillos antes de eliminar el ingrediente</string>

    <string name="measurement_kg">Kg</string>
    <string name="measurement_lt">Lt</string>
    <string name="measurement_pz">Pzs</string>


    <string name="inventory_dish">Platillos</string>
    <string name="inventory_ingredients">Ingredientes</string>

    <string name="expenses">Servicios</string>
    <string name="expenses_new">Agregar servicios</string>
    <string name="expenses_his">Registro Servicios</string>
    <string name="expenses_delete">¿Estas seguro que deseas eliminar este servicio?</string>

    <string name="inventory_add_dish">Agregar Platillo</string>
    <string name="inventory_add_ingredients">Agregar Ingredientes</string>
    <string name="inventory_add_group">Grupos</string>

    <string name="sale_order">Orden</string>
    <string name="sale_total">Total</string>
    <string name="sale_pay">Pago</string>
    <string name="sale_exchange">Cambio</string>


    <string name="assorment_add">Añadir</string>
    <string name="assorment_finish">Finalizar</string>

    <string name="assorments_total">Total</string>
    <string name="assorments_list">Lista</string>

    <string name="group_add">Agregar Grupo</string>
    <string name="group_add_title">Nombre grupo</string>
    <string name="group_edit_dialog">Nuevo Nombre</string>

    <string name="dialog_photo_title">Método de captura</string>

    <string name="dialog_search_title">Filtros</string>

    <string name="dialogSelectDateTittle">Seleccionar Fecha</string>
    <string name="dialogSelectDateToday">Hoy</string>
    <string name="dialogSelectDateWeek">Semana Pasada</string>
    <string name="dialogSelectDateMoth">Este mes</string>
    <string name="dialogSelectDateInitial">Selecciona la fecha inicial</string>
    <string name="dialogSelectDateFinal">Selecciona la fecha final</string>

    <string name="message_invalid_email">Ingrese un correo electrónico valido.</string>
    <string name="message_invalid_password">La contraseña debe contar con al menos 8 caracteres.</string>

    <string name="moth_enero">Enero</string>
    <string name="moth_febrero">Febrero</string>
    <string name="moth_marzo">Marzo</string>
    <string name="moth_abril">Abril</string>
    <string name="moth_mayo">Mayo</string>
    <string name="moth_junio">Junio</string>
    <string name="moth_julio">Julio</string>
    <string name="moth_agosto">Agosto</string>
    <string name="moth_septiempre">Septiembre</string>
    <string name="moth_octubre">Octubre</string>
    <string name="moth_noviembre">Noviembre</string>
    <string name="moth_diciembre">Diciembre</string>

    <string name="wait">Favor de esperar un momento.</string>
    <string name="error">Ocurrió un error, favor de esperar un momento</string>
    <string name="invalid">Usuario o contraseña invalido</string>


    <string name="item_amount">Cant:</string>

    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_accept">Aceptar</string>

    <string name="dialog_assorment_title">Editar</string>
    <string name="dialog_assorment_amount">Cantidad</string>
    <string name="dialog_assorment_price">Precio</string>
    <string name="dialog_assorment_description">Descripción</string>
    <string name="dialog_dish_title">Platillos</string>
    <string name="languaje">1</string>


</resources>