<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawerMenuSale"
            android:icon="@drawable/icon_sale"
            android:title="@string/menu_sale" />

        <item
            android:id="@+id/drawerMenuSales"
            android:icon="@drawable/icon_sale"
            android:title="@string/menu_sales" />

        <item
            android:id="@+id/drawerMenuStock"
            android:icon="@drawable/icon_stock"
            android:title="@string/menu_stock" />

        <item
            android:id="@+id/drawerMenuAssorment"
            android:icon="@drawable/icon_ingredients"
            android:title="@string/menu_assorment" />

        <item
            android:id="@+id/drawerMenuAssorments"
            android:icon="@drawable/icon_ingredients"
            android:title="@string/menu_assorments" />

        <item
            android:id="@+id/drawerMenuExpenses"
            android:icon="@drawable/icon_ingredients"
            android:title="@string/menu_expences" />
    </group>

</menu>