<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Dishes"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dish_name"
        style="@style/TitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:drawablePadding="5dp"
            style="@style/TitleText"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dish_price"
        style="@style/TitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dishPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:drawablePadding="5dp"
            style="@style/TitleText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_group"
        android:textSize="18sp"
        style="@style/TitleText"/>

    <Spinner
        android:id="@+id/dishGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dish_description"
        style="@style/TitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dishDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:drawablePadding="5dp"
            style="@style/TitleText" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dishIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/dishAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_add" />

    </LinearLayout>
</ScrollView>