<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_border"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="8dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogSelectDateTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:gravity="center"
            android:hint="@string/dialogSelectDateTittle"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/dialogSelectDateToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:text="@string/dialogSelectDateToday"
                android:background="@drawable/round_button_white"/>

            <Button
                android:id="@+id/dialogSelectDateWeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="center"
                android:maxLines="2"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:text="@string/dialogSelectDateWeek"
                android:background="@drawable/round_button_white" />


            <Button
                android:id="@+id/dialogSelectDateMoth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:text="@string/dialogSelectDateMoth"
                android:background="@drawable/round_button_white" />

        </LinearLayout>

        <DatePicker
            android:id="@+id/dialogSelectDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:calendarViewShown="false"
            android:theme="@style/my_time_picker_style"
            android:datePickerMode="spinner"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp">

            <Button
                android:id="@+id/dialogSelectDateCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:minWidth="1200dp"
                android:background="@drawable/round_button_white"
                android:text="@string/dialog_cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dialogSelectDateAccept"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:background="@drawable/round_button_white"
                android:text="@string/dialog_accept"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>