<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/black_border"
    android:minWidth="800dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/dialogServicesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TitleText"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialogServicesPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/ic_menu_camera"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/imageBorderColor"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dish_name"
        style="@style/TitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogServicesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="text"
            android:importantForAutofill="no"
            style="@style/Button" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dish_name"
        style="@style/TitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogServicesCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            style="@style/Button" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/dialogServicesCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button_white"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:text="@string/dialog_cancel" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <Button
            android:id="@+id/dialogServicesAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:background="@drawable/round_button_white"
            android:text="@string/dialog_accept" />

    </LinearLayout>
</LinearLayout>