<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_button_blue"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/dialogTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/dialogTextEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:inputType="text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:background="@drawable/round_button_white"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/dialogTextCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_white"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:text="@string/dialog_cancel" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialogTextAceptar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:background="@drawable/round_button_white"
            android:text="@string/dialog_accept" />

    </LinearLayout>


</LinearLayout>